Potential fix for stretched image

--- a/styles/goodApples/styles.scss
+++ b/styles/goodApples/styles.scss
@@ -87,6 +87,7 @@
       display: flex;
       justify-content: center;
       margin-bottom: 62px;
+      height: 100%;
       .good-apples_design-affinity-mapping-img {
         width: 90%;
       }
